# emo-generator

ai/: .dockerignore  .env.example  .gitignore  README.md  environment.yml  pyproject.toml
ai/config/: data.yaml  model.yaml  training.yaml
ai/deployments/docker/: Dockerfile.cpu  Dockerfile.gpu  docker-compose.yml
ai/notebooks/: emoji_generator_pipeline.ipynb
ai/scripts/: download_and_extract_gdrive.py  download_from_huggingface.py  download_mlflow_model.py  evaluate.py  inference.py  mlflow.py  mlflow_client.py  register_to_mlflow.py  streamlit_app.py  train.py  upload_to_huggingface.py
ai/src/common/: constants.py
ai/src/data/: data_loaders.py  datasets.py  transforms.py
ai/src/inference/: generator.py  postprocess.py
ai/src/models/encoders/: clip.py  vae.py
ai/src/models/stable_diffusion/: attention.py  diffusion.py  scheduler.py  unet.py
ai/src/training/: metrics.py  trainer.py
ai/src/ui/: app.py  streamlit_utils.py
ai/src/utils/: checkpoint.py  config.py  image.py  logging.py  mlflow.py  model.py
