[project]
name = "ai"
version = "0.1.0"
description = ""
authors = [
    {name = "ducnd58233",email = "only4wns@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "torch (>=2.7.1,<3.0.0)",
    "torchvision (>=0.22.1,<0.23.0)",
    "gdown (>=5.2.0,<6.0.0)",
    "pandas (>=2.3.1,<3.0.0)",
    "transformers (>=4.53.3,<5.0.0)",
    "diffusers (>=0.34.0,<0.35.0)",
    "huggingface-hub (>=0.33.4,<0.34.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "mlflow (>=3.1.3,<4.0.0)",
]

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.2.0"
pre-commit-hooks = "^5.0.0"
black = "^25.1.0"
isort = "^6.0.1"
autoflake = "^2.3.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
